setup firebase hosting

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -35,7 +35,7 @@
             Phasellus semper risus in eros aliquam congue. Duis arcu urna, aliquam et mauris faucibus, cursus blandit arcu. Suspendisse varius metus a lacus scelerisque maximus. Quisque ut pharetra mauris. Vivamus at mi lacus. In pharetra nulla quis ornare porta. Morbi quis lectus id nibh consectetur molestie.
             <br>
             <br>
-            Glance Back is a project by <a href="www.mayaman.cc">Maya Man</a>.
+            <div id="credits">Glance Back is a project by <a href="www.mayaman.cc">Maya Man</a>.</div>
           </div>
           <div id="gif-container">
             <img src="/assets/me.gif" alt="" id="glances-gif" />
