added sun rays to extension link

--- a/public/index.html
+++ b/public/index.html
@@ -34,11 +34,16 @@
             Doesn't your computer deserve a chance to glance back at you? <br />
 
             <div id="extension-link-container">
-              <a
-                id="extension-link"
-                href="https://chrome.google.com/webstore/detail/cl-internal-glance-back/pkbnggelikmlkdgkfnmfhhbhhombfjjc/related"
-                >get the chrome extension</a
-              >
+                <img
+                src="/assets/rays.png"
+                alt=""
+                class=""
+                id="link-border"
+              ><a
+              id="extension-link"
+              href="https://chrome.google.com/webstore/detail/cl-internal-glance-back/pkbnggelikmlkdgkfnmfhhbhhombfjjc/related"
+              >get the chrome extension</a
+            ><img/>
             </div>
           </div>
         </div>
