added lil description

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -29,19 +29,46 @@
               id="glanceback-logo"
             />
           </a>
-          <div id="about-text">Glance Back Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            <br>
-            <br>
-            Phasellus semper risus in eros aliquam congue. Duis arcu urna, aliquam et mauris faucibus, cursus blandit arcu. Suspendisse varius metus a lacus scelerisque maximus. Quisque ut pharetra mauris. Vivamus at mi lacus. In pharetra nulla quis ornare porta. Morbi quis lectus id nibh consectetur molestie.
-            <br>
-            <br>
-            <div id="credits">Glance Back is a project by <a href="https://www.mayaman.cc">Maya Man</a>.
-              <img
-              src="/assets/arrow.png"
-              alt=""
-              class=""
-              id="arrow"
-            />
+          <div id="about-text">
+            You know that feeling when someone is staring at you for a really
+            long time? It’s super uncomfortable right? Especially if this gaze
+            is unreciprocated. Glance Back grew out a desire to recognize that
+            this phenomenon occurs every day between ourselves and our machines
+            when we spend all day looking at our screens. <br />
+            <br />
+            With this chrome extension, once a day at random when you open a new
+            tab, Glance Back will quickly snap a photo of you and inquire: “What
+            are you thinking about?”. Once you type your answer and press enter,
+            the photo and thought will collectively be saved to your history of
+            glances, cumulatively creating an archive of what you look like and
+            what you’re thinking about when you’re staring at your screen. Given
+            that most of the digital photos we generate of ourselves today are
+            highly curated (ie wait let me fix my hair and smile and please take
+            at least 10 photos just to make sure there’s a good one!), Glance
+            Back also acts as an antidote to this attitude by providing you with
+            unexpected and often… unflattering… photos of yourself. <br />
+            <br />
+
+            It’s important to note that all of the photos are saved to your
+            browser’s local storage. This means that they never leave your
+            machine. This is something shared purely between you and your
+            computer. If you want the photos for yourself, you can choose to
+            download them under the settings tab in the top right. You can also
+            delete photos from the archive and choose whether the extension
+            requires you to write a caption or not.<br />
+            <br />
+            When using our devices, we’re pulled into and solely focused on the
+            glowing world that exists on the other side of the screen. We lose
+            both an awareness of self and an awareness of the real world context
+            surrounding us. This extension aims to disrupt this trance and
+            remind you that you are here and your computer is there and you’re
+            staring at it and wow is that really what I look like right now?<br />
+            <br />
+            
+            <div id="credits">
+              Glance Back is a project by
+              <a href="https://www.mayaman.cc">Maya Man</a>.
+              <img src="/assets/arrow.png" alt="" class="" id="arrow" />
             </div>
           </div>
           <div id="gif-container">
