--- a/public/about/index.html
+++ b/public/about/index.html
@@ -42,9 +42,9 @@
             the photo and thought will collectively be saved to your history of
             glances, cumulatively creating an archive of moments you share with
             your screen. Given that most of the digital photos we generate of
-            ourselves today are highly curated (i.e. wait let me fix my hair and
+            ourselves today are highly curated (i.e. <i> wait let me fix my hair and
             smile and please take at least 10 photos just to make sure there’s a
-            good one!), Glance Back also acts as an antidote to this attitude by
+            good one!</i>), Glance Back also acts as an antidote to this attitude by
             providing you with unexpected and often… unflattering… photos of
             yourself. <br />
             <br />
