--- a/public/about/index.html
+++ b/public/about/index.html
@@ -39,7 +39,7 @@
             With this chrome extension, once a day at random when you open a new
             tab, Glance Back will quickly snap a photo of you and inquire: “What
             are you thinking about?”. Once you type your answer and press enter,
-            the photo and thought will collectively be saved to your history of
+            the photo and thought will be collectively saved to your history of
             glances, cumulatively creating an archive of moments you share with
             your screen. Given that most of the digital photos we generate of
             ourselves today are highly curated (i.e. <i> wait let me fix my hair and
@@ -60,8 +60,8 @@
             When using our devices, we’re pulled into and solely focused on the
             glowing world that exists on the screen. We lose both an awareness
             of self and of the real world context surrounding us. This extension
-            aims to disrupt this trance and remind you that you are here and
-            your computer is there and you’re staring at it and wow is that
+            aims to disrupt that trance and remind you that you are here and
+            your computer is there and you are just staring at it and wow is that
             really what I look like right now?<br />
             <br />
 
