I am indecisive about dot dot dot

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -61,7 +61,7 @@
             glowing world that exists on the screen. We lose both an awareness
             of self and of the real world context surrounding us. This extension
             aims to disrupt that trance and remind you that you are here and
-            your computer is there and you are just staring at it and wow is that
+            your computer is there and you are just staring at it and... wow is that
             really what I look like right now?<br />
             <br />
 
