--- a/public/about/index.html
+++ b/public/about/index.html
@@ -30,6 +30,15 @@
             />
           </a>
           <div id="about-text">
+            <b
+              >Glance Back is a chrome extension that acts as a method of
+              passive documentation. Once a day when you open a new tab, it will
+              take your photo, ask you what you’re thinking about, and save both
+              the photo and the thought to its locally stored archive.
+            </b><br />
+            <br />
+            <hr>
+            <br />
             You know that feeling when someone is staring at you for a really
             long time? It’s super uncomfortable right? Especially if this gaze
             is unreciprocated. Glance Back grew out of a desire to recognize
@@ -42,9 +51,11 @@
             the photo and thought will be collectively saved to your history of
             glances, cumulatively creating an archive of moments you share with
             your screen. Given that most of the digital photos we generate of
-            ourselves today are highly curated (i.e. <i> wait let me fix my hair and
-            smile and please take at least 10 photos just to make sure there’s a
-            good one!</i>), Glance Back also acts as an antidote to this attitude by
+            ourselves today are highly curated (i.e.
+            <i>
+              wait let me fix my hair and smile and please take at least 10
+              photos just to make sure there’s a good one!</i
+            >), Glance Back also acts as an antidote to this attitude by
             providing you with unexpected and often… unflattering… photos of
             yourself. <br />
             <br />
@@ -61,8 +72,8 @@
             glowing world that exists on the screen. We lose both an awareness
             of self and of the real world context surrounding us. This extension
             aims to disrupt that trance and remind you that you are here and
-            your computer is there and you are just staring at it and... wow is that
-            really what I look like right now?<br />
+            your computer is there and you are just staring at it and... wow is
+            that really what I look like right now?<br />
             <br />
 
             <div id="credits">
