--- a/public/about/index.html
+++ b/public/about/index.html
@@ -18,7 +18,7 @@
               <a href="./" id="about"
                 ><div class="menu-option white">about</div></a
               >
-              <a href="../" id="about"><div class="menu-option">home</div></a>
+              <a href="../" id="about"><div class="menu-option">back</div></a>
             </div>
           </div>
           <a href="/">
@@ -31,7 +31,8 @@
           </a>
           <div id="about-text">
             <b
-              >Glance Back is a chrome extension that acts as a method of
+              >Glance Back is a <a href="https://chrome.google.com/webstore/detail/glance-back/hgickafobcmcfffbjiamhhejkockfccm">chrome extension</a>
+              that acts as a method of
               passive documentation. Once a day when you open a new tab, it will
               take your photo, ask you what you’re thinking about, and save both
               the photo and the thought to its locally stored archive.
