--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,13 @@
     <div class="container">
       <div id="gallery">
         <div id="header">
-          <div id="menu">
-            <!--
-              <img id="menu-title" src="./assets/menu-horizontal.png" alt="" />
-            -->
+          <!-- <div id="menu">         
             <div id="menu-options">
               <a href="./about/" id="about"
                 ><div class="menu-option">about</div></a
               >
             </div>
-          </div>
+          </div> -->
 
           <a href="/">
             <img
@@ -30,9 +27,8 @@
             />
           </a>
           <div id="splash-text">
-            You spend so much time staring at your computer... <br />
-            Doesn't your computer deserve a chance to glance back at you? <br />
-
+            <div id="intro-text">You spend so much time staring at your computer... <br />
+              Doesn't your computer deserve a chance to glance back at you? <br /></div>
             <div id="extension-link-container">
                 <img
                 src="/assets/rays.png"
@@ -45,6 +41,69 @@
               >get the chrome extension</a
             ><img/>
             </div>
+
+            <div id="about-text">
+              Glance Back is a daily photo diary, capturing the moments shared between you and your computer. Once a day, when you open a new tab, Glance Back will unexpectedly
+                take your photo, ask you what you’re thinking about, and save both
+                the photo and written thought to its locally stored archive.
+              <br />
+              <br />
+              <div id="squiggle-container">
+                <img
+                src="/assets/squiggle.png"
+                alt=""
+                class="squiggle"
+                id="squiggle"
+              >
+              </div>  
+              <br />
+              You know that feeling when someone is staring at you for a really
+              long time? It’s super uncomfortable right? Especially if this gaze
+              is unreciprocated. Glance Back grew out of a desire to recognize
+              that this phenomenon occurs between ourselves and our machines when
+              we spend so much time looking at our screen. <br />
+              <br />
+              With this chrome extension, once a day at random when you open a new
+              tab, Glance Back will quickly snap a photo of you and inquire: “What
+              are you thinking about?”. Once you type your answer and press enter,
+              the photo and thought will be collectively saved to your history of
+              glances, cumulatively creating an archive of moments you share with
+              your screen. Given that most of the digital photos we generate of
+              ourselves today are highly curated (i.e.
+              <i>
+                wait let me fix my hair and smile and please take at least 10
+                photos just to make sure there’s a good one!</i
+              >), Glance Back also acts as an antidote to this attitude by
+              providing you with unexpected and often… unflattering… photos of
+              yourself. <br />
+              <br />
+  
+              It’s important to note that all of the photos are saved to your
+              browser’s local storage. This means that they never leave your
+              machine. This is a collection shared purely between you and your
+              computer. If you want the photos for yourself, you can choose to
+              download them under the settings tab in the top right. You can also
+              delete photos from the archive and choose whether the extension
+              requires you to write a caption or not. <br />
+              <br />
+              When using our devices, we’re pulled into and solely focused on the
+              glowing world that exists on the screen. We lose both an awareness
+              of self and of the real world context surrounding us. This extension
+              aims to disrupt that trance and remind you that you are here and
+              your computer is there and you are just staring at it and... wow is
+              that really what I look like right now?<br />
+              <br />
+  
+              <div id="credits">
+                Glance Back is a project by
+                <a href="https://mayaontheinter.net">Maya Man</a>.
+                <img src="/assets/arrow.png" alt="" class="" id="arrow" />
+              </div>
+            </div>
+            <div id="gif-container">
+              <img src="/assets/me.gif" alt="" id="glances-gif" />
+            </div>
+          </div>
           </div>
         </div>
         <br />
