2020 update oh yeah

--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,25 @@
           </div> -->
 
           <a href="/">
-            <img
+            <!-- <img
               src="/assets/logo2.PNG"
               alt=""
               class="logo"
               id="glanceback-logo"
+            /> -->
+            <img
+              src="/assets/GlanceBackReel_WithLogo.gif"
+              alt=""
+              class="logo"
+              id="glanceback-logo"
             />
-          </a>
+            <!-- <img
+            src="/assets/GlanceBack_Thumbnail.gif"
+            alt=""
+            class="logo"
+            id="glanceback-logo"
+          />           -->
+        </a>
           <div id="splash-text">
             <div id="intro-text">You spend so much time staring at your computer... <br />
               Doesn't your computer deserve a chance to glance back at you? <br /></div>
@@ -93,15 +105,21 @@
               your computer is there and you are just staring at it and... wow is
               that really what I look like right now?<br />
               <br />
-  
+              <img src="/assets/04.png" alt="" id="" class="screengrab" />
+              <br>
+              <img src="/assets/01.png" alt="" id="" class="screengrab" />
+              <!-- <img src="/assets/03.png" alt="" id="" class="screengrab" /> -->
               <div id="credits">
+                  <img src="/assets/arrow.png" alt="" class="" id="arrow" />
+
                 Glance Back is a project by
                 <a href="https://mayaontheinter.net">Maya Man</a>.
-                <img src="/assets/arrow.png" alt="" class="" id="arrow" />
               </div>
             </div>
             <div id="gif-container">
-              <img src="/assets/me.gif" alt="" id="glances-gif" />
+              <!-- <img src="/assets/me.gif" alt="" id="glances-gif" /> -->
+              <!-- <img src="/assets/me.png" alt="" id="glances-gif" /> -->
+
             </div>
           </div>
           </div>
