deleted unused assets, added note from home

--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,26 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" type="image/png" href="/assets/logo2.PNG" />
+  <link rel="shortcut icon" type="image/png" href="/assets/logo.png" />
   <title>Glance Back</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <div class="container">
-    <!-- <div id="covid-container">
-      Hi! ~ <a href="./weirdtime/">weird time</a>~ right??!?
-      <br>
-      Sending good energy (^^^) to you through your screen
-    </div> -->
+    <div id="covid-container">
+      <a href="./notefromhome/"> Hi, weird time we're in right now.
+        Sending ~~~good energy~~~ to you through this screen. </a>
+    </div>
     <div id="gallery">
       <div id="splash-div">
-        <img src="../assets/logo2.png" alt="" class="logo" id="glanceback-logo" />
+        <img src="/assets/logo.png" alt="" class="logo" id="glanceback-logo" />
         <img src="/assets/reel.gif" alt="" id="reel" />
         <div id="intro-text">You spend so much time staring at your computer... <br />
           Doesn't your computer deserve a chance to glance back at you? <br /></div>
         <div id="extension-link-container">
           <img src="/assets/rays.png" alt="" class="" id="link-border"><a id="extension-link"
-            href="https://chrome.google.com/webstore/detail/glance-back/hgickafobcmcfffbjiamhhejkockfccm">get the
+            href="https://chrome.google.com/webstore/detail/glance-back/hgickafobcmcfffbjiamhhejkockfccm" target="_blank">get the
             chrome extension</a><img />
         </div>
       </div>
@@ -80,7 +79,7 @@
         <img src="/assets/scroll.png" alt="" id="" class="screengrab" />
         <img src="/assets/arrow.png" alt="" class="" id="arrow" />
         Glance Back is a project by
-        <a href="https://mayaontheinter.net">Maya Man</a>.
+        <a href="https://mayaontheinter.net" target="_blank">Maya Man</a>.
       </div>
     </div>
     <br />
