--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/png" href="/assets/logo2.PNG" />
+    <link rel="shortcut icon" type="image/png" href="/assets/logo.PNG" />
     <title>Glance Back</title>
     <link rel="stylesheet" href="../style.css" />
   </head>
@@ -20,19 +20,18 @@
 
           <a href="/">
             <img
-              src="/assets/logo2.PNG"
+              src="/assets/logo.PNG"
               alt=""
               class="logo"
               id="glanceback-logo"
             />
           </a>
           <div id="privacy-text">
-            <div id="about-text">
-              <h2>Glance Back Privacy Policy</h2>
+            <div id="intro-text">Glance Back Privacy Policy<br /></div>
               <i>Posted: July 29th, 2019</i>
               <br />
               <br />
-
+            <div id="about-text">
               After you grant Glance Back permission to access the webcam, once a day at random it will take a photo and ask you to type what you are thinking about. 
               <br />
               <br />
