--- a/public/notefromhome/index.html
+++ b/public/notefromhome/index.html
@@ -35,23 +35,27 @@
           <img src="../assets/squiggle.png" alt="" class="squiggle" id="squiggle">
         </div>
         <br />
-        While it used to be primarily attached to my daily rituals including work, art-making, and yes, my insatiable craving
+        While it used to be primarily attached to my daily rituals including work, art-making, and yes, my insatiable
+        craving
         for distraction, the past few months have forced my computer and by extension my screen to become the default
         destination for activities that I once thought necessitated a physical, communal space: game nights,
         dance parties, workshops, passover seders, and even the classic quick catch up over coffee. All of these bespoke
-        happenings now pseudo occur within the same 
-        confines of my New York apartment as I sit hunched over the kitchen table with my eyes drinking in my 
+        happenings now pseudo occur within the same
+        confines of my New York apartment as I sit hunched over the kitchen table with my eyes drinking in my
         laptop's blue light.<br />
         <br />
         Opening my computer simultaneously feels like an escape and a trap. I scroll, click, and type with newfound
-        desperation, anxious for updates, connection, knowledge, and entertainment all at the same time. It's harder than ever
-        to spend time away from my screen when my screen appears to be the only safe place I can really go. For this
+        desperation, anxious for updates, connection, knowledge, and entertainment. It's harder
+        than ever
+        to spend time away from my screen when it feels like the only place I can really go. For this
         reason, any interruption to nudge me toward introspection feels especially
         welcome.<br />
         <br />
-        I built Glance Back over a year ago as a tool for myself to capture the many hours I spend hypnotized, 
-        staring deep into the eyes of the internet. It's a method of documentation but also a practice of confrontation. I force
-        myself to look at my reflection and consider what's *really* on my mind. By encasing this question within the confines
+        I built Glance Back over a year ago as a tool for myself to capture the many hours I spend hypnotized,
+        staring deep into the eyes of the internet. It's a method of documentation but also a practice of confrontation.
+        I force
+        myself to look at my reflection and consider what's *really* on my mind. By encasing this question within the
+        confines
         of this tool, I hoped it would become an act of genuine personal contemplation rather than a starter prompt to
         present my thoughts to hundreds of internet "friends". <br />
         <br />
@@ -59,7 +63,7 @@
         hope that especially during this indefinitely lasting moment it helps you stop and think about yourself, your
         screen, and the agency you hold in forming a relationship between the two.<br />
         <br />
-        Sending hearts and hugs to you as we all sit pretty and privately in our respective local storage,
+        Sending hearts and hugs to you as we all sit privately in our respective local storage,
         <br>
         (As I was writing this I thought of that joke and could not not include it, thanks,)
         <br>
@@ -67,18 +71,19 @@
         Maya
         <3 <br>
           <br>
-          P.S. Here are some recent Glance Backs that I feel are emblematic of how I am currently spending my time.
-          <br>
-          If you have any gems you'd like to share, send them to <a href="mailto:hello@mayaontheinter.net">hello@mayaontheinter.net</a>.
-          <br>
-          <br>
           <img src="../assets/homeglances/2020-04-27.png" alt="" id="" class="home-glance" />
           <img src="../assets/homeglances/2020-04-06.png" alt="" id="" class="home-glance" />
           <img src="../assets/homeglances/2020-04-18.png" alt="" id="" class="home-glance" />
           <img src="../assets/homeglances/2020-03-23.png" alt="" id="" class="home-glance" />
           <img src="../assets/homeglances/2020-03-27.png" alt="" id="" class="home-glance" />
           <img src="../assets/homeglances/2020-03-30.png" alt="" id="" class="home-glance" />
-          <!-- <img src="../assets/homeglances/2020-04-21.png" alt="" id="" class="home-glance" /> -->
+          <br>
+          <br>
+          P.S. Here are some recent Glance Backs that I feel are emblematic of how I am currently spending my time.
+          <br>
+          If you have any gems you'd like to share, send them to <a
+            href="mailto:hello@mayaontheinter.net">hello@mayaontheinter.net</a>.
+          <br>
       </div>
     </div>
     <br />
