--- a/public/notefromhome/index.html
+++ b/public/notefromhome/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div id="covid-container">
-      <a href="/">~~~ back ~~~</a>
+      <a href="/">~~~ < < < ~~~</a>
       <!-- <br>
       ~ ~ ~ ~ ~ -->
     </div>
