added gallery and larger images

--- a/public/index.html
+++ b/public/index.html
@@ -10,19 +10,22 @@
 
 <body>
   <div class="container">
-    <div id="covid-container">
+    <!-- <div id="covid-container">
       <a href="./notefromhome/"> Hi, weird time we're in right now.
         Sending ~~~good energy~~~ to you through this screen. </a>
-    </div>
+    </div> -->
     <div id="gallery">
       <div id="splash-div">
-        <img src="/assets/logo.png" alt="" class="logo" id="glanceback-logo" />
-        <img src="/assets/reel.gif" alt="" id="reel" />
+        <a href="/"> <img src="../assets/logo.png"
+            alt="Hand drawn image of a computer with an eye looking out. The words glance back surround the eye."
+            class="logo" id="glanceback-logo" />
+        </a> <img src="/assets/reel.gif" alt="" id="reel" />
         <div id="intro-text">You spend so much time staring at your computer... <br />
           Doesn't your computer deserve a chance to glance back at you? <br /></div>
         <div id="extension-link-container">
           <img src="/assets/rays.png" alt="" class="" id="link-border"><a id="extension-link"
-            href="https://chrome.google.com/webstore/detail/glance-back/hgickafobcmcfffbjiamhhejkockfccm" target="_blank">get the
+            href="https://chrome.google.com/webstore/detail/glance-back/hgickafobcmcfffbjiamhhejkockfccm"
+            target="_blank">get the
             chrome extension</a><img />
         </div>
       </div>
@@ -73,16 +76,16 @@
         your computer is there and you are just staring at it and... wow is
         that really what I look like right now?<br />
         <br />
-        <img src="/assets/gallery.png" alt="" id="" class="screengrab" />
-        <img src="/assets/editmode.png" alt="" id="" class="screengrab" />
+        Peek at others' Glance Back reels <a href="./isaac/">here</a>, <a href="./lauren/">here</a>, and <a href="./sal/">here</a>.
         <img src="/assets/question.png" alt="" id="" class="screengrab" />
-        <img src="/assets/scroll.png" alt="" id="" class="screengrab" />
+        <img src="/assets/gallery.png" alt="" id="" class="screengrab" />
+        <!-- <img src="/assets/scroll.png" alt="" id="" class="screengrab" /> -->
+        <!-- <img src="/assets/editmode.png" alt="" id="" class="screengrab" /> -->
         <img src="/assets/arrow.png" alt="" class="" id="arrow" />
         Glance Back is a project by
         <a href="https://mayaontheinter.net" target="_blank">Maya Man</a>.
       </div>
     </div>
-    <br />
   </div>
   </div>
 </body>
