--- a/public/notefromhome/index.html
+++ b/public/notefromhome/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div id="covid-container">
-      <a href="/">~~~ < < < ~~~</a>
+      <a href="/">~ < ~ < ~ < ~</a>
       <!-- <br>
       ~ ~ ~ ~ ~ -->
     </div>
@@ -19,7 +19,7 @@
       <div id="splash-div">
         <img src="../assets/logo.png" alt="" class="logo" id="glanceback-logo" />
         <!-- <img src="../assets/reel.gif" alt="" id="reel" /> -->
-        <div id="intro-text">In quarantine, my screen time has new meaning.<br /></div>
+        <div id="intro-text">In quarantine, screen time has assumed new meaning.<br /></div>
         <!-- <div id="extension-link-container">
           <img src="../assets/rays.png" alt="" class="" id="link-border"><a id="extension-link"
             href="https://chrome.google.com/webstore/detail/glance-back/hgickafobcmcfffbjiamhhejkockfccm">get the
@@ -55,7 +55,7 @@
         staring deep into the eyes of the internet. It's a method of documentation but also a practice of confrontation.
         I force
         myself to look at my reflection and consider what's *really* on my mind. By encasing this question within the
-        confines
+        framework
         of this tool, I hoped it would become an act of genuine personal contemplation rather than a starter prompt to
         present my thoughts to hundreds of internet "friends". <br />
         <br />
@@ -80,7 +80,6 @@
           <br>
           <br>
           P.S. Here are some recent Glance Backs that I feel are emblematic of how I am currently spending my time.
-          <br>
           If you have any gems you'd like to share, send them to <a
             href="mailto:hello@mayaontheinter.net">hello@mayaontheinter.net</a>.
           <br>
